// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionToggle extension disabled in settings 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="toggle inlineCenter"
    data-testid="extension-toggle-x/y"
    role="switch"
    title="Click to enable"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;

exports[`ExtensionToggle extension enabled in settings 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="toggle inlineCenter"
    data-testid="extension-toggle-x/y"
    role="switch"
    title="Click to disable"
    type="button"
    value="1"
  >
    <span
      class="bar barOn"
    />
    <span
      class="knob knobOn"
    />
  </button>
</DocumentFragment>
`;

exports[`ExtensionToggle extension not present in settings 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="toggle inlineCenter"
    data-testid="extension-toggle-x/y"
    role="switch"
    title="Click to enable"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;
